pygi-property: Support boxed GSList/GList types

Note that this does not yet work for construct properties.

Co-Authored-By: Martin Pitt <martinpitt@gnome.org>

https://bugzilla.gnome.org/show_bug.cgi?id=684059